<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:visibility="visible"
    tools:context=".activities.responsavel.EditarResponsavelActivity">

    <TextView
        android:id="@+id/txt_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtNome"
        android:textSize="15sp"
        android:textStyle="bold"></TextView>

    <EditText
        android:id="@+id/edt_nome"
        android:hint="Nome:"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:textSize="14sp">
    </EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtRA"
        android:textSize="15sp"
        android:textStyle="bold"></TextView>

    <EditText
        android:id="@+id/edt_ra"
        android:hint="RA:"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:textSize="14sp">
    </EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtNIS"
        android:textSize="15sp"
        android:textStyle="bold"></TextView>

    <EditText
        android:id="@+id/edt_nis"
        android:hint="NIS:"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:textSize="14sp">
    </EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtDataNasci"
        android:textSize="15sp"
        android:textStyle="bold"></TextView>

    <EditText
        android:id="@+id/edt_data_nasci"
        android:hint="Data Nascimento:"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:textSize="14sp">
    </EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtRua"
        android:textSize="15sp"
        android:textStyle="bold"></TextView>

    <EditText
        android:id="@+id/edt_rua"
        android:hint="Rua:"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:textSize="14sp">
    </EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtNumero"
        android:textSize="15sp"
        android:textStyle="bold"></TextView>

    <EditText
        android:id="@+id/edt_numero"
        android:hint="Número da casa:"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:textSize="14sp">
    </EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtBairro"
        android:textSize="15sp"
        android:textStyle="bold"></TextView>

    <EditText
        android:id="@+id/edt_bairro"
        android:hint="Bairro:"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:textSize="14sp">
    </EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtSelecionaResp"
        android:textSize="15sp"
        android:textStyle="bold"></TextView>

    <Spinner
        android:id="@+id/spnResponsavel"
        android:layout_width="match_parent"
        android:layout_height="30dp">
    </Spinner>

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp"
        >
    </Space>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_num_matriculas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_weight="1">
        </TextView>

        <Button
            android:id="@+id/btn_verMatriculas"
            android:layout_width="65dp"
            android:layout_height="40dp"
            android:textSize="11dp"
            android:text="Ver">
        </Button>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp"
        >
    </Space>

    <Button
        android:id="@+id/btn_atualizarAtendido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/txtBtnAtt">
    </Button>

</LinearLayout>