<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".activities.turma.EditarTurmaActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtNome"
        android:textSize="15sp"
        android:textStyle="bold"></TextView>

    <EditText
        android:id="@+id/edt_nome"
        android:hint="Nome:"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:textSize="14sp">
    </EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtSelecionarPeriodo"
        android:textSize="15sp"
        android:textStyle="bold"></TextView>

    <EditText
        android:id="@+id/edt_periodo"
        android:hint="Período:"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:textSize="14sp">
    </EditText>


    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp">
    </Space>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtSelecionarInst"
        android:textSize="15sp"
        android:textStyle="bold"></TextView>

    <Spinner
        android:id="@+id/spnInstrutor"
        android:layout_width="match_parent"
        android:layout_height="30dp">
    </Spinner>

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp">
    </Space>

    <Button
        android:id="@+id/btn_atualizarTurma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/txtBtnAtt"></Button>

</LinearLayout>