<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    tools:context=".activities.matricula.EditarMatriculaActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtSelecionarTurma"
        android:textSize="15sp"
        android:textStyle="bold"></TextView>

    <Spinner
        android:id="@+id/spnTurma"
        android:layout_width="match_parent"
        android:layout_height="30dp">
    </Spinner>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp">
    </Space>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtSelecioneAtend"
        android:textSize="15sp"
        android:textStyle="bold"></TextView>

    <Spinner
        android:id="@+id/spnAtendido"
        android:layout_width="match_parent"
        android:layout_height="30dp">
    </Spinner>

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp">
    </Space>

    <Button
        android:id="@+id/btn_attMatricula"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/txtBtnAtt"></Button>

</LinearLayout>