<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.usuario.UsuarioAttActivity">

    <EditText
        android:id="@+id/edt_novaSenha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:hint="Digite a nova senha"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/edt_senha"
        app:layout_constraintTop_toBottomOf="@+id/txtConfirmarSenha2" />

    <TextView
        android:id="@+id/txtConfirmarSenha2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/txtNovaSenha"
        android:textColor="@color/vermelhoCaritas"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/edt_senha"
        app:layout_constraintTop_toBottomOf="@+id/edt_senha" />

    <EditText
        android:id="@+id/edt_usuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Digite o usuário"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/txtUsuario"
        app:layout_constraintTop_toBottomOf="@+id/txtUsuario" />

    <EditText
        android:id="@+id/edt_senha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/txtSenha"
        app:layout_constraintTop_toBottomOf="@+id/txtSenha"
        android:hint="Digite a senha atual"/>


    <Button
        android:id="@+id/btn_alterar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/txtBtnAlterarSenha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_confirmaSenha" />

    <TextView
        android:id="@+id/txtSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/txtSenhaAtual"
        android:textColor="@color/vermelhoCaritas"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/txtUsuario"
        app:layout_constraintTop_toBottomOf="@+id/edt_usuario" />

    <TextView
        android:id="@+id/txtConfirmarSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/txtConfirmaSenha"
        android:textColor="@color/vermelhoCaritas"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/txtConfirmarSenha2"
        app:layout_constraintTop_toBottomOf="@+id/edt_novaSenha" />

    <EditText
        android:id="@+id/edt_confirmaSenha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:hint="Repita a nova senha"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtConfirmarSenha"
        app:layout_constraintTop_toBottomOf="@+id/txtConfirmarSenha" />

    <TextView
        android:id="@+id/txtUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="25dp"
        android:text="@string/txtUsuario"
        android:textColor="@color/vermelhoCaritas"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="40dp"
        android:text="@string/txtTrocaDeSenha"
        android:textAlignment="center"
        android:textColor="@color/vermelhoCaritas"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>