<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.usuario.LoginActivity">

    <EditText
        android:id="@+id/edt_usuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/txtUsuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtUsuario"
        app:layout_constraintTop_toTopOf="@+id/txtUsuario"
        android:hint="Digite o usuário"/>

    <EditText
        android:id="@+id/edt_senha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="@+id/txtSenha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/edt_usuario"
        app:layout_constraintTop_toTopOf="@+id/txtSenha"
        android:hint="Digite a senha"/>

    <Button
        android:id="@+id/btn_alterar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:text="@string/txtBtnLogin"
        app:layout_constraintEnd_toEndOf="@+id/edt_senha"
        app:layout_constraintTop_toBottomOf="@+id/edt_senha" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/caritas_logo"
        />

    <TextView
        android:id="@+id/txtSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/txtSenha"
        android:textColor="@color/vermelhoCaritas"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/txtUsuario"
        app:layout_constraintTop_toBottomOf="@+id/txtUsuario" />

    <TextView
        android:id="@+id/txtUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:text="@string/txtUsuario"
        android:textColor="@color/vermelhoCaritas"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <Button
        android:id="@+id/btn_registrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/txtBtnCriaConta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>