<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.usuario.RegistrarActivity">

    <EditText
        android:id="@+id/edt_usuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Digite o usuário"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/txtUsuario"
        app:layout_constraintTop_toBottomOf="@+id/txtUsuario" />

    <EditText
        android:id="@+id/edt_senha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/txtSenha"
        app:layout_constraintTop_toBottomOf="@+id/txtSenha"
        android:hint="Digite a senha"/>


    <Button
        android:id="@+id/btn_alterar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:text="@string/txtBtnRegistrar"
        app:layout_constraintEnd_toEndOf="@+id/edt_senhaAdm"
        app:layout_constraintTop_toBottomOf="@+id/edt_senhaAdm" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="200dp"
        android:layout_height="164dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/caritas_logo" />

    <TextView
        android:id="@+id/txtSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/txtSenha"
        android:textColor="@color/vermelhoCaritas"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/txtUsuario"
        app:layout_constraintTop_toBottomOf="@+id/edt_usuario" />

    <TextView
        android:id="@+id/txtConfirmarSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/txtConfirmaSenha"
        android:textColor="@color/vermelhoCaritas"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/txtSenha"
        app:layout_constraintTop_toBottomOf="@+id/edt_senha" />

    <TextView
        android:id="@+id/txtSenhaAdm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/txtSenhaAdm"
        android:textColor="@color/vermelhoCaritas"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/txtConfirmarSenha"
        app:layout_constraintTop_toBottomOf="@+id/edt_confirmaSenha" />

    <TextView
        android:id="@+id/txtUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:text="@string/txtUsuario"
        android:textColor="@color/vermelhoCaritas"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <EditText
        android:id="@+id/edt_confirmaSenha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/txtConfirmarSenha"
        app:layout_constraintTop_toBottomOf="@+id/txtConfirmarSenha"
        android:hint="Repita a senha"/>

    <EditText
        android:id="@+id/edt_senhaAdm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/txtSenhaAdm"
        app:layout_constraintTop_toBottomOf="@+id/txtSenhaAdm"
        android:hint="Digite a senha do admistrador"/>

</androidx.constraintlayout.widget.ConstraintLayout>